--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
-    "@types/uuid": "^8.3.4",
-    "@types/styled-components": "^5.1.25"
+    "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^8.3.4"
   }
 }
