--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "gts lint",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run lint"
   },
   "eslintConfig": {
     "extends": [
@@ -36,10 +43,12 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^16.11.27",
+    "@types/node": "^14.11.2",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "@types/styled-components": "^5.1.25",
-    "@types/uuid": "^8.3.4"
+    "@types/uuid": "^8.3.4",
+    "gts": "^3.1.0",
+    "typescript": "^4.0.3"
   }
 }
